--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,2 +1,7 @@
 @charset "utf-8";
+
+$fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
+
+@import "~@fortawesome/fontawesome-free/scss/fontawesome";
+@import "~@fortawesome/fontawesome-free/scss/solid";
 @import "~bulma/bulma";
