--- a/src/styles/classes.scss
+++ b/src/styles/classes.scss
@@ -12,7 +12,11 @@
     margin-left: -0.2857142857rem;
     margin-top: 3rem;
     & a {
+        align-items: center;
         color: $text-light;
+        column-gap: 1rem;
+        display: inline-grid;
+        grid-template-areas: "icon text";
     }
 }
 
